--- a/Gaggle/app/src/main/res/values/themes.xml
+++ b/Gaggle/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Gaggle" parent="Theme.AppCompat.DayNight.NoActionBar" />
+    <style name="Theme.Gaggle" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
+    <style name="Theme.Gaggle.Splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+<!--        <item name="android:windowBackground">@drawable/splash_screen_background</item>-->
+    </style>
 </resources>
