--- a/Gaggle/app/src/main/res/navigation/nav_graph.xml
+++ b/Gaggle/app/src/main/res/navigation/nav_graph.xml
@@ -13,13 +13,29 @@
             android:id="@+id/action_login_to_register"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_login_to_main"
-            app:destination="@id/mainFragment"
+            android:id="@+id/action_login_to_home"
+            app:destination="@id/homeActivity"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
+        android:id="@+id/profileFragment"
+        android:name="edu.utap.gaggle.ui.ProfileFragment"
+        android:label="Profile">
+        <action
+            android:id="@+id/action_profileFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+    <activity
+        android:id="@+id/homeActivity"
+        android:name="edu.utap.gaggle.HomeActivity"
+        android:label="Home">
+    </activity>
+
+
+<fragment
         android:id="@+id/registerFragment"
         android:name="edu.utap.gaggle.RegisterFragment"
         android:label="Register">
