--- a/Gaggle/app/src/main/res/layout/fragment_profile.xml
+++ b/Gaggle/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
-
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="40dp" />
         <EditText
             android:id="@+id/editUsername"
             android:layout_width="match_parent"
