--- a/Gaggle/app/src/main/res/layout/fragment_progress.xml
+++ b/Gaggle/app/src/main/res/layout/fragment_progress.xml
@@ -8,6 +8,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/progressRecyclerView"
