--- a/Gaggle/app/src/main/res/layout/fragment_feed.xml
+++ b/Gaggle/app/src/main/res/layout/fragment_feed.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_marginBottom="60dp"
         android:clipToPadding="false"
         android:paddingBottom="8dp"
         android:scrollbars="vertical" />
