--- a/Gaggle/app/src/main/res/layout/fragment_login.xml
+++ b/Gaggle/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,9 @@
     android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="40dp" />
 
     <EditText
         android:id="@+id/emailInput"
