--- a/Gaggle/app/src/main/res/layout/fragment_feed.xml
+++ b/Gaggle/app/src/main/res/layout/fragment_feed.xml
@@ -1,7 +1,7 @@
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true">
 
     <LinearLayout
@@ -11,12 +11,28 @@
         android:orientation="vertical"
         android:padding="8dp">
 
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/feedRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false" />
 
+        <TextView
+            android:id="@+id/noGagglesPrompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Haven't joined a gaggle yet!"
+            android:textAppearance="?attr/textAppearanceBody1"
+            android:visibility="gone"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
             android:id="@+id/emptyFeedPlaceholder"
             android:layout_width="match_parent"
